--- a/source/catalog.html
+++ b/source/catalog.html
@@ -41,16 +41,16 @@
               <h3 class="catalog-main__item-title text text--bigger">Cat Energy PRO 500 г</h3>
               <table class="catalog-main__info" border="0">
                 <tr class="catalog-main__info-row">
-                  <td class="catalog-main__info-cell">Объём</td>
-                  <td class="catalog-main__info-cell catalog-main__info-cell--value">500 г</td>
+                  <td class="catalog-main__info-cell catalog-main__info-cell--first">Объём</td>
+                  <td class="catalog-main__info-cell catalog-main__info-cell--second">500 г</td>
                 </tr>
                 <tr class="catalog-main__info-row">
-                  <td class="catalog-main__info-cell">Вкус</td>
-                  <td class="catalog-main__info-cell catalog-main__info-cell--value">Курица</td>
+                  <td class="catalog-main__info-cell catalog-main__info-cell--first">Вкус</td>
+                  <td class="catalog-main__info-cell catalog-main__info-cell--second">Курица</td>
                 </tr>
                 <tr class="catalog-main__info-row">
-                  <td class="catalog-main__info-cell">Цена</td>
-                  <td class="catalog-main__info-cell">700 Р.</td>
+                  <td class="catalog-main__info-cell catalog-main__info-cell--first">Цена</td>
+                  <td class="catalog-main__info-cell catalog-main__info-cell--second">700 Р.</td>
                 </tr>
               </table>
             </div>
@@ -62,16 +62,16 @@
               <h3 class="catalog-main__item-title text text--bigger">Cat Energy PRO 1000 г</h3>
               <table class="catalog-main__info">
                 <tr class="catalog-main__info-row">
-                  <td class="catalog-main__info-cell">Объём</td>
-                  <td class="catalog-main__info-cell">1000 г</td>
+                  <td class="catalog-main__info-cell catalog-main__info-cell--first">Объём</td>
+                  <td class="catalog-main__info-cell catalog-main__info-cell--second">1000 г</td>
                 </tr>
                 <tr class="catalog-main__info-row">
-                  <td class="catalog-main__info-cell">Вкус</td>
-                  <td class="catalog-main__info-cell">Курица</td>
+                  <td class="catalog-main__info-cell catalog-main__info-cell--first">Вкус</td>
+                  <td class="catalog-main__info-cell catalog-main__info-cell--second">Курица</td>
                 </tr>
                 <tr class="catalog-main__info-row">
-                  <td class="catalog-main__info-cell">Цена</td>
-                  <td class="catalog-main__info-cell">1000 Р.</td>
+                  <td class="catalog-main__info-cell catalog-main__info-cell--first">Цена</td>
+                  <td class="catalog-main__info-cell catalog-main__info-cell--second">1000 Р.</td>
                 </tr>
               </table>
             </div>
@@ -83,16 +83,16 @@
               <h3 class="catalog-main__item-title text text--bigger">Cat Energy PRO 500 г</h3>
               <table class="catalog-main__info">
                 <tr class="catalog-main__info-row">
-                  <td class="catalog-main__info-cell">Объём</td>
-                  <td class="catalog-main__info-cell">500 г</td>
+                  <td class="catalog-main__info-cell catalog-main__info-cell--first">Объём</td>
+                  <td class="catalog-main__info-cell catalog-main__info-cell--second">500 г</td>
                 </tr>
                 <tr class="catalog-main__info-row">
-                  <td class="catalog-main__info-cell">Вкус</td>
-                  <td class="catalog-main__info-cell">Рыба</td>
+                  <td class="catalog-main__info-cell catalog-main__info-cell--first">Вкус</td>
+                  <td class="catalog-main__info-cell catalog-main__info-cell--second">Рыба</td>
                 </tr>
                 <tr class="catalog-main__info-row">
-                  <td class="catalog-main__info-cell">Цена</td>
-                  <td class="catalog-main__info-cell">700 Р.</td>
+                  <td class="catalog-main__info-cell catalog-main__info-cell--first">Цена</td>
+                  <td class="catalog-main__info-cell catalog-main__info-cell--second">700 Р.</td>
                 </tr>
               </table>
             </div>
@@ -104,16 +104,16 @@
               <h3 class="catalog-main__item-title text text--bigger">Cat Energy PRO 1000 г</h3>
               <table class="catalog-main__info">
                 <tr class="catalog-main__info-row">
-                  <td class="catalog-main__info-cell">Объём</td>
-                  <td class="catalog-main__info-cell">1000 г</td>
+                  <td class="catalog-main__info-cell catalog-main__info-cell--first">Объём</td>
+                  <td class="catalog-main__info-cell catalog-main__info-cell--second">1000 г</td>
                 </tr>
                 <tr class="catalog-main__info-row">
-                  <td class="catalog-main__info-cell">Вкус</td>
-                  <td class="catalog-main__info-cell">Рыба</td>
+                  <td class="catalog-main__info-cell catalog-main__info-cell--first">Вкус</td>
+                  <td class="catalog-main__info-cell catalog-main__info-cell--second">Рыба</td>
                 </tr>
                 <tr class="catalog-main__info-row">
-                  <td class="catalog-main__info-cell">Цена</td>
-                  <td class="catalog-main__info-cell">1000 Р.</td>
+                  <td class="catalog-main__info-cell catalog-main__info-cell--first">Цена</td>
+                  <td class="catalog-main__info-cell catalog-main__info-cell--second">1000 Р.</td>
                 </tr>
               </table>
             </div>
@@ -125,16 +125,16 @@
               <h3 class="catalog-main__item-title text text--bigger">Cat Energy SLIM 500 г</h3>
               <table class="catalog-main__info">
                 <tr class="catalog-main__info-row">
-                  <td class="catalog-main__info-cell">Объём</td>
-                  <td class="catalog-main__info-cell">500 г</td>
+                  <td class="catalog-main__info-cell catalog-main__info-cell--first">Объём</td>
+                  <td class="catalog-main__info-cell catalog-main__info-cell--second">500 г</td>
                 </tr>
                 <tr class="catalog-main__info-row">
-                  <td class="catalog-main__info-cell">Вкус</td>
-                  <td class="catalog-main__info-cell">Гречка</td>
+                  <td class="catalog-main__info-cell catalog-main__info-cell--first">Вкус</td>
+                  <td class="catalog-main__info-cell catalog-main__info-cell--second">Гречка</td>
                 </tr>
                 <tr class="catalog-main__info-row">
-                  <td class="catalog-main__info-cell">Цена</td>
-                  <td class="catalog-main__info-cell">400 Р.</td>
+                  <td class="catalog-main__info-cell catalog-main__info-cell--first">Цена</td>
+                  <td class="catalog-main__info-cell catalog-main__info-cell--second">400 Р.</td>
                 </tr>
               </table>
             </div>
@@ -146,16 +146,16 @@
               <h3 class="catalog-main__item-title text text--bigger">Cat Energy SLIM 1000 г</h3>
               <table class="catalog-main__info">
                 <tr class="catalog-main__info-row">
-                  <td class="catalog-main__info-cell">Объём</td>
-                  <td class="catalog-main__info-cell">1000 г</td>
+                  <td class="catalog-main__info-cell catalog-main__info-cell--first">Объём</td>
+                  <td class="catalog-main__info-cell catalog-main__info-cell--second">1000 г</td>
                 </tr>
                 <tr class="catalog-main__info-row">
-                  <td class="catalog-main__info-cell">Вкус</td>
-                  <td class="catalog-main__info-cell">Гречка</td>
+                  <td class="catalog-main__info-cell catalog-main__info-cell--first">Вкус</td>
+                  <td class="catalog-main__info-cell catalog-main__info-cell--second">Гречка</td>
                 </tr>
                 <tr class="catalog-main__info-row">
-                  <td class="catalog-main__info-cell">Цена</td>
-                  <td class="catalog-main__info-cell">700 Р.</td>
+                  <td class="catalog-main__info-cell catalog-main__info-cell--first">Цена</td>
+                  <td class="catalog-main__info-cell catalog-main__info-cell--second">700 Р.</td>
                 </tr>
               </table>
             </div>
@@ -167,16 +167,16 @@
               <h3 class="catalog-main__item-title text text--bigger">Cat Energy SLIM 500 г</h3>
               <table class="catalog-main__info">
                 <tr class="catalog-main__info-row">
-                  <td class="catalog-main__info-cell">Объём</td>
-                  <td class="catalog-main__info-cell">500 г</td>
+                  <td class="catalog-main__info-cell catalog-main__info-cell--first">Объём</td>
+                  <td class="catalog-main__info-cell catalog-main__info-cell--second">500 г</td>
                 </tr>
                 <tr class="catalog-main__info-row">
-                  <td class="catalog-main__info-cell">Вкус</td>
-                  <td class="catalog-main__info-cell">Рис</td>
+                  <td class="catalog-main__info-cell catalog-main__info-cell--first">Вкус</td>
+                  <td class="catalog-main__info-cell catalog-main__info-cell--second">Рис</td>
                 </tr>
                 <tr class="catalog-main__info-row">
-                  <td class="catalog-main__info-cell">Цена</td>
-                  <td class="catalog-main__info-cell">500 Р.</td>
+                  <td class="catalog-main__info-cell catalog-main__info-cell--first">Цена</td>
+                  <td class="catalog-main__info-cell catalog-main__info-cell--second">500 Р.</td>
                 </tr>
               </table>
             </div>
@@ -198,8 +198,8 @@
             <h3 class="catalog-additional__item-title text text--bigger">Сахарозаменитель</h3>
             <table class="catalog-additional__info">
               <tr class="catalog-additional__row">
-                <td class="catalog-additional__cell">1 Упаковка (100 г)</td>
-                <td class="catalog-additional__cell">100 Р.</td>
+                <td class="catalog-additional__cell catalog-additional__info-cell--first">1 Упаковка (100 г)</td>
+                <td class="catalog-additional__cell catalog-additional__info-cell--second">100 Р.</td>
               </tr>
             </table>
             <a class="catalog-additional__button button text text--bigger" href="#">Заказать</a>
@@ -208,8 +208,8 @@
             <h3 class="catalog-additional__item-title text text--bigger">Питьевая вода</h3>
             <table class="catalog-additional__info">
               <tr class="catalog-additional__row">
-                <td class="catalog-additional__cell">5 литров</td>
-                <td class="catalog-additional__cell">50 Р.</td>
+                <td class="catalog-additional__cell catalog-additional__info-cell--first">5 литров</td>
+                <td class="catalog-additional__cell catalog-additional__info-cell--second">50 Р.</td>
               </tr>
             </table>
             <a class="catalog-additional__button button text text--bigger" href="#">Заказать</a>
@@ -218,8 +218,8 @@
             <h3 class="catalog-additional__item-title text text--bigger">Молоко</h3>
             <table class="catalog-additional__info">
               <tr class="catalog-additional__row">
-                <td class="catalog-additional__cell">1 литр</td>
-                <td class="catalog-additional__cell">100 Р.</td>
+                <td class="catalog-additional__cell catalog-additional__info-cell--first">1 литр</td>
+                <td class="catalog-additional__cell catalog-additional__info-cell--second">100 Р.</td>
               </tr>
             </table>
             <a class="catalog-additional__button button text text--bigger" href="#">Заказать</a>
@@ -228,8 +228,8 @@
             <h3 class="catalog-additional__item-title text text--bigger">Витамины</h3>
             <table class="catalog-additional__info">
               <tr class="catalog-additional__row">
-                <td class="catalog-additional__cell">1 Упаковка (30 г)</td>
-                <td class="catalog-additional__cell">300 Р.</td>
+                <td class="catalog-additional__cell catalog-additional__info-cell--first">1 Упаковка (30 г)</td>
+                <td class="catalog-additional__cell catalog-additional__info-cell--second">300 Р.</td>
               </tr>
             </table>
             <a class="catalog-additional__button button text text--bigger" href="#">Заказать</a>
