Стилизация переключателя в блоке "было/стало"  в планшетной и десктопной версии

--- a/source/index.html
+++ b/source/index.html
@@ -94,11 +94,13 @@
         <div class="example__column example__column--cat">
           <img class="example__image" src="#" width="10" height="10" alt="Фото кота">
           <div class="before-after example__before-after">
-            <span class="before-after__text text text--bigger">Было</span>
+            <a class="before-after__text text text--bigger">Было</a>
             <div class="before-after__switch">
-              <div class="before-after__switch-on"></div>
+              <a class="before-after__switch-wrapper">
+                <div class="before-after__switch-on"></div>
+              </a>
             </div>
-            <span class="before-after__text text text--bigger">Стало</span>
+            <a class="before-after__text text text--bigger">Стало</a>
           </div>
         </div>
       </section>
