--- a/source/index.html
+++ b/source/index.html
@@ -9,7 +9,7 @@
   <body>
     <header class="page-header page-header--index">
       <div class="page-header__top">
-        <a class="page-header__logo" href="#">
+        <a class="page-header__logo">
           <img class="page-header__logo-image" src="#" width="10" height="10" alt="Логотип Cat Energy">
         </a>
         <img class="company-name page-header__company-name" src="#" width="10" height="10" alt="Cat Energy">
