--- a/source/form.html
+++ b/source/form.html
@@ -129,35 +129,39 @@
       <div class="map page-footer__map">
         <h2 class="visually-hidden">Карта с адресом</h2>
         <div class="contacts page-footer__contacts">
-          <h2 class="visually-hidden">Контакты</h2>
-          <p class="contacts__text text text--bigger">Приглашаем к сотрудничеству дилеров!</p>
-          <div class="contacts__adress">
-            <p class="contacts__street">ул. Большая Конюшенная, д. 19/8</p>
-            <p class="contacts__city">Санкт-Петербург</p>
+          <div class="contacts__wrapper">
+            <h2 class="visually-hidden">Контакты</h2>
+            <p class="contacts__text text text--bigger">Приглашаем к сотрудничеству дилеров!</p>
+            <div class="contacts__adress">
+              <p class="contacts__street">ул. Большая Конюшенная, д. 19/8</p>
+              <p class="contacts__city">Санкт-Петербург</p>
+            </div>
           </div>
         </div>
         <div class="map__block" id="map"></div>
       </div>
       <div class="page-footer__bottom">
-        <img class="company-name page-footer__company-name" src="#" width="10" height="10" alt="Cat Energy">
-        <div class="socials page-footer__socials">
-          <ul class="socials__list">
-            <li class="socials__item">
-              <a class="socials__link socials__link--vk" href="https://vk.com/htmlacademy">Мы в Вконтакте</a>
-            </li>
-            <li class="socials__item">
-              <a class="socials__link socials__link--inst" href="https://www.instagram.com/htmlacademy">Мы в Инстаграме</a>
-            </li>
-            <li class="socials__item">
-              <a class="socials__link socials__link--fb" href="https://www.facebook.com/htmlacademy">Мы в Фейсбук</a>
-            </li>
-          </ul>
-        </div>
-        <div class="copyright page-footer__copyright">
-          <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
-          <a class="copyright__logo" href="https://htmlacademy.ru/intensive/adaptive">
-            <img class="copyright__image" src="#" width="10" height="10" alt="Лого HTML Academy">
-          </a>
+        <div class="page-footer__bottom-wrapper">
+          <img class="company-name page-footer__company-name" src="#" width="10" height="10" alt="Cat Energy">
+          <div class="socials page-footer__socials">
+            <ul class="socials__list">
+              <li class="socials__item">
+                <a class="socials__link socials__link--vk" href="https://vk.com/htmlacademy">Мы в Вконтакте</a>
+              </li>
+              <li class="socials__item">
+                <a class="socials__link socials__link--inst" href="https://www.instagram.com/htmlacademy">Мы в Инстаграме</a>
+              </li>
+              <li class="socials__item">
+                <a class="socials__link socials__link--fb" href="https://www.facebook.com/htmlacademy">Мы в Фейсбук</a>
+              </li>
+            </ul>
+          </div>
+          <div class="copyright page-footer__copyright">
+            <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
+            <a class="copyright__logo" href="https://htmlacademy.ru/intensive/adaptive">
+              <img class="copyright__image" src="#" width="10" height="10" alt="Лого HTML Academy">
+            </a>
+          </div>
         </div>
       </div>
     </footer>
