--- a/source/form.html
+++ b/source/form.html
@@ -5,6 +5,10 @@
     <title>Подбор программы от Cat Energy</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link href="css/style.css" rel="stylesheet">
+    <script>
+      document.createElement( "picture" );
+    </script>
+    <script src="picturefill.min.js" async></script>
   </head>
   <body>
     <header class="page-header">
